Fix hunger balloon display style in dark mode

--- a/css/custom.css
+++ b/css/custom.css
@@ -216,4 +216,17 @@ h4 {
     img {
         filter: grayscale(30%);
     }
-  }
+    [data-balloon]::after {
+            background-color: rgba(31, 40, 51, 0.8);
+            border: 1px solid #66fcf1;
+            border-bottom: 0px;
+            border-radius: 0px;
+            font-weight: 500;
+            color: #e5e6e7;
+    }
+    [data-balloon-pos="up"]::before {
+        background:no-repeat url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba(31%2C%2040%2C%2051%2C%200.8)%22%20stroke%3D%22%2366fc141%22%20stroke-width%3D%221%22%20transform%3D%22rotate(0)%22%20d%3D%22M2.658%2C0.000%20C-13.615%2C0.000%2050.938%2C0.000%2034.662%2C0.000%20C28.662%2C0.000%2023.035%2C12.002%2018.660%2C12.002%20C14.285%2C12.002%208.594%2C0.000%202.658%2C0.000%20Z%22%2F%3E%3C%2Fsvg%3E");
+        background-size:100% auto;
+        color: #e5e6e7;
+    }
+}
